--- a/clients/ios/Interfaces/EditEntityViewController.xib
+++ b/clients/ios/Interfaces/EditEntityViewController.xib
@@ -232,7 +232,7 @@
 							<object class="IBUITextField" id="193551275">
 								<reference key="NSNextResponder" ref="382112458"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{10, 301}, {299, 32}}</string>
+								<string key="NSFrame">{{10, 371}, {299, 32}}</string>
 								<reference key="NSSuperview" ref="382112458"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="146672892"/>
@@ -264,7 +264,7 @@
 							<object class="IBUITextField" id="146672892">
 								<reference key="NSNextResponder" ref="382112458"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{10, 341}, {299, 32}}</string>
+								<string key="NSFrame">{{10, 411}, {299, 32}}</string>
 								<reference key="NSSuperview" ref="382112458"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="258435448"/>
@@ -296,7 +296,7 @@
 							<object class="IBUITextField" id="258435448">
 								<reference key="NSNextResponder" ref="382112458"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{10, 377}, {299, 32}}</string>
+								<string key="NSFrame">{{10, 447}, {299, 32}}</string>
 								<reference key="NSSuperview" ref="382112458"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
@@ -498,7 +498,7 @@
 									<object class="IBUITextField" id="725092674">
 										<reference key="NSNextResponder" ref="841841632"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{10, 79}, {299, 32}}</string>
+										<string key="NSFrame">{{10, 80}, {299, 32}}</string>
 										<reference key="NSSuperview" ref="841841632"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="964183762"/>
@@ -530,7 +530,7 @@
 									<object class="IBUITextField" id="964183762">
 										<reference key="NSNextResponder" ref="841841632"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{10, 128}, {113, 32}}</string>
+										<string key="NSFrame">{{10, 128}, {299, 32}}</string>
 										<reference key="NSSuperview" ref="841841632"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="63777813"/>
@@ -562,10 +562,10 @@
 									<object class="IBUITextField" id="813820391">
 										<reference key="NSNextResponder" ref="841841632"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{223, 128}, {86, 32}}</string>
+										<string key="NSFrame">{{196, 176}, {113, 32}}</string>
 										<reference key="NSSuperview" ref="841841632"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="34753696"/>
+										<reference key="NSNextKeyView" ref="423113975"/>
 										<string key="NSReuseIdentifierKey">_NS:294</string>
 										<reference key="IBUIBackgroundColor" ref="497850049"/>
 										<bool key="IBUIOpaque">NO</bool>
@@ -573,7 +573,7 @@
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 										<int key="IBUIContentVerticalAlignment">0</int>
 										<string key="IBUIText"/>
-										<string key="IBUIPlaceholder">Zip</string>
+										<string key="IBUIPlaceholder">Zip/Postal Code</string>
 										<object class="NSColor" key="IBUITextColor">
 											<int key="NSColorSpace">3</int>
 											<bytes key="NSWhite">MAA</bytes>
@@ -583,7 +583,6 @@
 										<float key="IBUIMinimumFontSize">12</float>
 										<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 											<int key="IBUIAutocorrectionType">1</int>
-											<int key="IBUIKeyboardType">4</int>
 											<int key="IBUIKeyboardAppearance">1</int>
 											<int key="IBUIReturnKeyType">9</int>
 											<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -594,7 +593,7 @@
 									<object class="IBUITextField" id="63777813">
 										<reference key="NSNextResponder" ref="841841632"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{130, 128}, {86, 32}}</string>
+										<string key="NSFrame">{{10, 176}, {176, 32}}</string>
 										<reference key="NSSuperview" ref="841841632"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="813820391"/>
@@ -605,7 +604,7 @@
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 										<int key="IBUIContentVerticalAlignment">0</int>
 										<string key="IBUIText"/>
-										<string key="IBUIPlaceholder">State</string>
+										<string key="IBUIPlaceholder">State/Province/Region</string>
 										<object class="NSColor" key="IBUITextColor">
 											<int key="NSColorSpace">3</int>
 											<bytes key="NSWhite">MAA</bytes>
@@ -623,8 +622,42 @@
 										<reference key="IBUIFontDescription" ref="821969173"/>
 										<reference key="IBUIFont" ref="707446619"/>
 									</object>
+									<object class="IBUIButton" id="423113975">
+										<reference key="NSNextResponder" ref="841841632"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{9, 219}, {301, 42}}</string>
+										<reference key="NSSuperview" ref="841841632"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="34753696"/>
+										<string key="NSReuseIdentifierKey">_NS:225</string>
+										<bool key="IBUIOpaque">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<int key="IBUIContentVerticalAlignment">0</int>
+										<double key="IBUIContentEdgeInsets.top">0.0</double>
+										<double key="IBUIContentEdgeInsets.bottom">0.0</double>
+										<double key="IBUIContentEdgeInsets.left">12</double>
+										<double key="IBUIContentEdgeInsets.right">0.0</double>
+										<string key="IBUITitleShadowOffset">{0, 1}</string>
+										<string key="IBUINormalTitle">United States</string>
+										<reference key="IBUIHighlightedTitleColor" ref="320705345"/>
+										<object class="NSColor" key="IBUINormalTitleColor">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MC4zAA</bytes>
+										</object>
+										<reference key="IBUIHighlightedTitleShadowColor" ref="497850049"/>
+										<reference key="IBUINormalTitleShadowColor" ref="320705345"/>
+										<object class="NSCustomResource" key="IBUINormalBackgroundImage">
+											<string key="NSClassName">NSImage</string>
+											<string key="NSResourceName">eCreate_country_button_bg.png</string>
+										</object>
+										<object class="IBUIFontDescription" key="IBUIFontDescription">
+											<int key="type">2</int>
+											<double key="pointSize">12</double>
+										</object>
+										<reference key="IBUIFont" ref="965109859"/>
+									</object>
 								</object>
-								<string key="NSFrame">{{0, 133}, {320, 160}}</string>
+								<string key="NSFrame">{{0, 133}, {320, 261}}</string>
 								<reference key="NSSuperview" ref="382112458"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="168896346"/>
@@ -941,6 +974,14 @@
 					<int key="connectionID">78</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">selectCountryButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="423113975"/>
+					</object>
+					<int key="connectionID">80</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">categoryDropdownPressed:</string>
 						<reference key="source" ref="377287954"/>
@@ -1073,6 +1114,15 @@
 					</object>
 					<int key="connectionID">77</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">selectCountryButtonPressed:</string>
+						<reference key="source" ref="423113975"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">81</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -1187,6 +1237,7 @@
 							<reference ref="964183762"/>
 							<reference ref="813820391"/>
 							<reference ref="63777813"/>
+							<reference ref="423113975"/>
 						</object>
 						<reference key="parent" ref="382112458"/>
 						<string key="objectName">Enter Location View</string>
@@ -1281,6 +1332,12 @@
 						<reference key="parent" ref="382112458"/>
 						<string key="objectName">Description Text Field</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">79</int>
+						<reference key="object" ref="423113975"/>
+						<reference key="parent" ref="841841632"/>
+						<string key="objectName">Button - Select Country</string>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1335,6 +1392,9 @@
 					<string>73.IBUIButtonInspectorSelectedEdgeInsetMetadataKey</string>
 					<string>76.CustomClassName</string>
 					<string>76.IBPluginDependency</string>
+					<string>79.IBPluginDependency</string>
+					<string>79.IBUIButtonInspectorSelectedEdgeInsetMetadataKey</string>
+					<string>79.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
 					<string>8.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
@@ -1388,6 +1448,9 @@
 					<string>STTextField</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<real value="0.0"/>
+					<real value="0.0"/>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -1402,7 +1465,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">78</int>
+			<int key="maxID">81</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1419,9 +1482,11 @@
 							<string>cancelButtonPressed:</string>
 							<string>categoryDropdownPressed:</string>
 							<string>doneButtonPressed:</string>
+							<string>selectCountryButtonPressed:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -1438,6 +1503,7 @@
 							<string>cancelButtonPressed:</string>
 							<string>categoryDropdownPressed:</string>
 							<string>doneButtonPressed:</string>
+							<string>selectCountryButtonPressed:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1461,6 +1527,10 @@
 								<string key="name">doneButtonPressed:</string>
 								<string key="candidateClassName">id</string>
 							</object>
+							<object class="IBActionInfo">
+								<string key="name">selectCountryButtonPressed:</string>
+								<string key="candidateClassName">id</string>
+							</object>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
@@ -1482,6 +1552,7 @@
 							<string>scrollView</string>
 							<string>secondStreetTextField</string>
 							<string>secondaryTextField</string>
+							<string>selectCountryButton</string>
 							<string>stateTextField</string>
 							<string>streetTextField</string>
 							<string>tertiaryTextField</string>
@@ -1504,6 +1575,7 @@
 							<string>UIScrollView</string>
 							<string>UITextField</string>
 							<string>UITextField</string>
+							<string>UIButton</string>
 							<string>UITextField</string>
 							<string>UITextField</string>
 							<string>UITextField</string>
@@ -1529,6 +1601,7 @@
 							<string>scrollView</string>
 							<string>secondStreetTextField</string>
 							<string>secondaryTextField</string>
+							<string>selectCountryButton</string>
 							<string>stateTextField</string>
 							<string>streetTextField</string>
 							<string>tertiaryTextField</string>
@@ -1597,6 +1670,10 @@
 								<string key="candidateClassName">UITextField</string>
 							</object>
 							<object class="IBToOneOutletInfo">
+								<string key="name">selectCountryButton</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
 								<string key="name">stateTextField</string>
 								<string key="candidateClassName">UITextField</string>
 							</object>
@@ -1658,6 +1735,7 @@
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>blue_button_bg.png</string>
+				<string>eCreate_country_button_bg.png</string>
 				<string>edit_action_button.png</string>
 				<string>edit_category_dropdown@2x.png</string>
 				<string>edit_category_dropdown_dark.png</string>
@@ -1671,6 +1749,7 @@
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<string>{16, 16}</string>
 				<string>{16, 16}</string>
 				<string>{16, 16}</string>
 				<string>{164, 84}</string>
